gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22818.d
version https://git-lfs.github.com/spec/v1
oid sha256:d37bed31c74022ec9dd7acda8b9f4fb830c2fe2841eb7c534e2ec48b86e79771
size 269
